chore: import lumber ebb5f0a76956c1ed1eaf043448ce72893c062ed2 fix express-jwt vulnerability (#569)
Signed-off-by: Guillaume Deslandes <guillaumed@forestadmin.com>

--- a/src/services/dumper/templates/app/app.hbs
+++ b/src/services/dumper/templates/app/app.hbs
@@ -43,6 +43,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use(jwt({
   secret: process.env.FOREST_AUTH_SECRET,
   credentialsRequired: false,
+  algorithms: ['HS256'],
 }));
 
 app.use('/forest', (request, response, next) => {
